# fnm-util

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: command.rs  main.rs  package.rs  version.rs
