[package]
name = "fnm-util"
version = "0.1.4"
edition = "2021"
authors = ["yukita443"]
description = "A tool for updating Node.js using fnm"
repository = "https://github.com/yukita443/fnm-util"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
duct = "0.13.7"
env_logger = "0.11.3"
log = "0.4.22"
thiserror = "1.0.61"
